--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
     <div id="tooltip">Tooltip</div>
 </body>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="js/typerank.js" type="text/javascript"></script>
 <script src="js/typetrend.js" type="text/javascript"></script>
 <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
